--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Course 2023</title>
-    <script src="./6-arrays.js" defer></script>
+    <script src="./1-variables-datatypes.js" defer></script>
   </head>
   <body></body>
 </html>
