--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Course 2023</title>
-    <script src="./7-objects-and-keyword-This.js" defer></script>
+    <script src="./8-dom-manipulation.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="test">
+      <h1>Hello Boy</h1>
+      <h2>Tatianaa</h2>
+    </div>
+  </body>
 </html>
