--- a/index.html
+++ b/index.html
@@ -6,10 +6,56 @@
     <title>JS Course 2023</title>
     <script src="./8-dom-manipulation.js" defer></script>
   </head>
+  <style>
+    .hello {
+      background-color: crimson;
+      color: white;
+      font-size: 2rem;
+      font-weight: 600;
+      padding: 1rem;
+      border-radius: 5px;
+      border: 4px solid black;
+    }
+    .green {
+      text-decoration: none;
+      color: black;
+      background-color: rgb(146, 228, 146);
+      border-radius: 10px;
+      font-size: 1rem;
+      font-weight: bold;
+      list-style: none;
+    }
+  </style>
   <body>
-    <div class="test">
+    <!-- <div class="test">
       <h1>Hello Boy</h1>
       <h2>Tatianaa</h2>
+    </div> -->
+
+    <div>
+      <span title="hi" id="hi">Hi</span>
+      <span data-uni-fellow id="hello">Hello</span>
+      <br />
+      <h2>Hello World</h2>
+      <button id="clickme" class="btn">Click</button>
     </div>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Extras</a></li>
+      <li><a href="#">FeedBack</a></li>
+    </ul>
+    <img
+      src="https://images.unsplash.com/photo-1682685797661-9e0c87f59c60?auto=format&fit=crop&q=80&w=1740&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+      alt=""
+      width="200"
+    />
+    <img
+      src="https://images.unsplash.com/photo-1574015974293-817f0ebebb74?auto=format&fit=crop&q=80&w=1873&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+      alt=""
+      width="200"
+    />
+    <br />
+    <p id="demo"></p>
   </body>
 </html>
